examples/nameresolution/Trait.an
trait Foo a b with
    foo: fn a -> b
    bar: a

// error: missing definition of foo
impl foo_i32_string: Foo I32 String with
    foo _x = "test"
    baz = 2

main () =
    foo 3
    bar : Unit

// args: --check
// expected stdout:
// // id = c1m88_37
// trait Foo_c1m88_37 a_1 b_2 with
//     foo_3: fn a_1 -> b_2
//     bar_6: a_1
// 
// // id = c1m88_10
// impl foo_i32_string_c1m88_10: Foo_c1m88_37 I32 String_b with
//     foo_1 _x_2 = "test"
//     baz_3 = 2
// 
// // id = c1m88_44
// main_c1m88_44 () =
//     foo_? 3
//     bar_?: Unit_?

// expected stderr:
// examples/nameresolution/Trait.an:11:4	error: `foo` is not defined, was it a typo?
//     foo 3
// 
// examples/nameresolution/Trait.an:12:4	error: `bar` is not defined, was it a typo?
//     bar : Unit

